--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,18 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=77.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "xldg"
-version = "0.3.0"
+version = "0.3.2"
 description = "XLDataGraph is a library for crosslinking data analysis and visualization."
 readme = "README.md"
-authors = [
-    {name = "a-helix", email = "sorokin.biochemistry@gmail.com"},
-]
-license = {text = "GPL-3.0"}
+authors = [{name = "a-helix"}]
+license-files = ["LICENSE"]
+
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 ]
 requires-python = ">=3.7"
 dependencies = [
