--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "xldg"
-version = "0.3.2"
+version = "0.3.3a"
 description = "XLDataGraph is a library for crosslinking data analysis and visualization."
 readme = "README.md"
 authors = [{name = "a-helix"}]
