--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "xldg"
-version = "0.3.3a"
+version = "0.3.3"
 description = "XLDataGraph is a library for crosslinking data analysis and visualization."
 readme = "README.md"
 authors = [{name = "a-helix"}]
@@ -14,11 +14,13 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
+
 requires-python = ">=3.7"
 dependencies = [
     "requests>=2.32.3",
     "pyCirclize>=1.6.0",
     "matplotlib_venn>=1.1.2",
+    "networkx>=3.4.2",
 ]
 
 [project.urls]
