--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,13 @@ build-backend = "setuptools.build_meta"
 name = "xldg"
 version = "0.3.7"
 description = "XLDataGraph is a library for crosslinking data analysis and visualization."
-readme = "README.md"
 authors = [{name = "a-helix"}]
 license-files = ["LICENSE"]
+
+[project.readme]
+file = "README.md"
+content-type = "text/markdown"
+charset = "utf-8"
 
 classifiers = [
     "Programming Language :: Python :: 3",
